# iolanta-tech

./: .gitignore  404.html  README.md  facets.yaml  index.html  iolanta_tables_facets.py  jeeves.py  mkdocs.yml  objects.inv  pyproject.toml  schema.json  sitemap.xml
.github/workflows/: deploy.yml
File/: index.html
blog/: index.html
blog/anything-ld/: index.html
blog/anytype/: index.html
blog/autocomplete/: index.html
blog/jetbrains/: index.html
blog/pivot/: index.html
blog/redocly/: index.html
blog/type/: index.html
blog/why-linked-data/: index.html
docs/: .pages  File.md  ide.md  index.md  url.md
docs/3d-force-graph/: roadmap.yaml
docs/blog/: 0000-pivot.md  autocomplete.md  index.md  jetbrains.md  why-linked-data.md
docs/facets/: bool.md
docs/jinja2/: index.md  render.md
docs/project/: index.md  roadmap.md  roadmap.yaml
docs/samples/: self.yaml
docs/tables/: .pages  class.md  columns.md  index.md  install.md  rows.md  self.md
docs/vocabularies/: .pages  id.md  index.md  type.md
facets/bool/: index.html
ide/: index.html
iolanta_tech/facets/: __init__.py  code.py  criterion.py  side_by_side.py
jinja2/: index.html
jinja2/render/: index.html
keywords/: index.html
keywords/id/: index.html
keywords/type/: index.html
project/: index.html  roadmap.yaml
project/roadmap/: index.html
project/whitepaper/: facet-black-box.yaml  index.html  loading-into-graph.yaml
roadmap/examples/: matrix.yaml
search/: search_index.json
tables/: index.html
title/: index.html
url/: index.html
vocabularies/: index.html
(+68 files in other folders)
