[tool.poetry]
name = "iolanta-tech"
version = "0.1.0"
description = "https://iolanta.tech"
authors = ["Anatoly Scherbakov <altaisoft@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "iolanta_tech"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
jeeves-yeti-pyproject = "^0.2.12"
mkdocs-awesome-pages-plugin = "^2.8.0"
mkdocs-iolanta = "^0.1.1"
iolanta = "^1.0.6"
mkdocstrings-python = "^0.8.3"
mkdocs-material = "^9.0.14"
iolanta-tables = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
